--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name" : "drink-tosser",
 	"version" : "0.0.1",
 	"dependencies" : {
-		"express" : "2.5.1"
+		"express" : "2.5.1",
 		"node" : "0.6.2"
 	}
 }	
