--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name" : "drink-tosser",
 	"version" : "0.0.1",
 	"dependencies" : {
-		"express" : "2.5.1"
+		"express" : "2.5.1",
+		"jade" : "0.19.0"
 	}
 }	
