--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 		"express" : "2.5.1",
 		"jade" : "0.19.0",
 		"oauth" : "0.9.5",
-		"dateformat" : "1.0.2-1.2.3"
+		"dateformat" : "1.0.2-1.2.3",
+		"mailer" : "0.6.7"
 	}
 }	
